--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,14 @@
         ":semanticCommits",
         ":automergeMinor",
         ":automergeBranch",
-        "schedule:automergeWeekly"
-    ]
+        "schedule:automergeWeekly",
+        ":rebaseStalePrs"
+    ],
+    "packageRules": [
+        {
+          "matchUpdateTypes": ["minor", "patch"],
+          "matchCurrentVersion": "!/^0/",
+          "automerge": true
+        }
+      ]
 }
