--- a/renovate.json
+++ b/renovate.json
@@ -1,17 +1,3 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [
-        ":semanticCommits",
-        ":automergeMinor",
-        ":automergeBranch",
-        "schedule:automergeWeekly",
-        ":rebaseStalePrs"
-    ],
-    "packageRules": [
-        {
-          "matchUpdateTypes": ["minor", "patch"],
-          "matchCurrentVersion": "!/^0/",
-          "automerge": true
-        }
-      ]
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json"
 }
